overflow fixed

--- a/assets/css/mainBanner.css
+++ b/assets/css/mainBanner.css
@@ -1,8 +1,10 @@
-@charset "UTF-8";
+ @charset "UTF-8";
 
 #slider {
    width: 100%;
+   height: 550px;
    text-align: center;
+   overflow: hidden;
 }
 #slider input[type=radio] {
    display: none;
@@ -20,6 +22,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
   background: linear-gradient(#151414 2%, transparent 90%), linear-gradient(transparent 80%, #FFFAFA);
 }
 .slide-content{
